crates/toml_edit/tests/snapshots/invalid/ext/integer/overflow-pos.stderr
TOML parse error at line 1, column 5
  |
1 | a = 9223372036854775808
  |     ^^^^^^^^^^^^^^^^^^^
integer number overflowed
